# SyncWave-Tauri

./: README.md  package-lock.json  package.json
src/: App.vue  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ffmpeg.rs  lib.rs  main.rs  ncm.rs  playlist.rs
src/components/: DropZone.vue  Icon.vue  LogPanel.vue  ProgressBar.vue  Toast.vue
src/composables/: useFfmpegPage.ts
src/pages/: AvMerge.vue  ClipVideo.vue  CompressVideo.vue  ExtractAudio.vue  FormatConvert.vue  Mesugaki.vue  MusicPlayer.vue  NcmConvert.vue  VideoToGif.vue
src/styles/: components.css  ffmpeg-pages.css  layout.css  merge-page.css  mesugaki.css  ncm-page.css  player.css  variables.css
src/utils/: api.ts  format.ts  icons.ts
